--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/framework": "^6.0 || ^7.0"
+        "laravel/framework": "^6.0 || ^7.0"
     },
     "require-dev": {},
     "scripts": {
