--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.2",
-        "laravel/framework": "^6.0 || ^7.0"
+        "illuminate/console": "^6.0 || ^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.2"
