--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - composer self-update
   - composer install --prefer-dist --no-interaction
 script:
+  - composer phpstan
   - composer phpunit
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
