--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^5.2",
-        "phpstan/phpstan": "^0.12.25"
+        "nunomaduro/larastan": "^0.5.8"
     },
     "scripts": {
         "phpunit": "phpunit --coverage-text",
