--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
+includes:
+    - ./vendor/nunomaduro/larastan/extension.neon
 parameters:
-    level: 0
+    level: 1
     paths:
         - src
         - tests
