--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,19 @@
         "illuminate/console": "^6.0 || ^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.2"
+        "orchestra/testbench": "^5.2",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "scripts": {
+        "phpcs": "php-cs-fixer fix -v --diff --dry-run --allow-risky=yes --ansi",
         "phpunit": "phpunit --coverage-text",
         "test": [
+            "@phpcs",
             "@phpunit"
         ]
     },
     "scripts-descriptions": {
+        "phpcs": "Runs coding style test suite",
         "phpunit": "Runs unit and function tests",
         "test": "Runs all tests"
     },
