--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ php:
   - 7.3
   - 7.4
 
+cache:
+  directories:
+  - "$HOME/.composer/cache"
 before_script:
-  - composer self-update
-  - composer install --prefer-dist --no-interaction
+  - travis_retry composer self-update
+install:
+  - travis_retry composer install --prefer-dist --no-interaction
 script:
+  - composer phpcs
   - composer phpunit
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
