--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/build
-/node_modules
+/.idea
+/.vscode
+/coverage
+/phpunit.xml
 /vendor
-composer.lock
-
 .DS_Store
+.php-cs-fixer.cache
+.phpunit.result.cache
+clover.xml
+composer.lock
+composer.phar
 Thumbs.db
-
-.idea
-.php_cs.cache
