--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="false"
+<phpunit bootstrap="vendor/autoload.php"
+    backupGlobals="false"
     backupStaticAttributes="false"
-    bootstrap="vendor/autoload.php"
     colors="true"
+    verbose="true"
     convertErrorsToExceptions="true"
     convertNoticesToExceptions="true"
     convertWarningsToExceptions="true"
     processIsolation="false"
     stopOnFailure="false">
+
     <testsuites>
         <testsuite name="all">
             <directory suffix=".php">./tests/</directory>
@@ -15,15 +17,14 @@
     </testsuites>
 
     <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
+        <whitelist>
             <directory suffix=".php">./src/</directory>
         </whitelist>
     </filter>
 
     <logging>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/clover.xml"/>
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
+        <log type="coverage-clover" target="clover.xml" showUncoveredFiles="true"/>
+        <log type="coverage-html" target="coverage/" lowUpperBound="35" highLowerBound="70"/>
     </logging>
 </phpunit>
