--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/console": "^9.35"
+        "php": "^8.1",
+        "illuminate/console": "^9.35|^10.0|^11.0"
     },
     "require-dev": {
         "distortedfusion/php-cs-fixer-config": "^2.0",
